--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -310,7 +310,7 @@
 </script>
 
 <script>
-<<<<<<< HEAD
+
     document.addEventListener('DOMContentLoaded', function () {
         var navItems = document.querySelectorAll('.nav-item');
 
@@ -340,13 +340,13 @@
             event.preventDefault(); // Prevent form submission if the search keyword is empty
         }
     });
-=======
-  document.getElementById('searchForm').addEventListener('submit', function
+
+  {{!-- document.getElementById('searchForm').addEventListener('submit', function
   (event) { var searchKeyword = document.getElementById('searchInput').value; if
   (searchKeyword.trim()) { // Append the search keyword to the URL
   window.location.href = '/search?params=' + encodeURIComponent(searchKeyword);
   event.preventDefault(); // Prevent the default form submission } else {
   event.preventDefault(); // Prevent form submission if the search keyword is
-  empty } });
->>>>>>> 106d09938a8132e99cf4665c6b258e118aa97832
+  empty } }); --}}
+
 </script>
