--- a/src/resource/views/feedback/showFeedback.hbs
+++ b/src/resource/views/feedback/showFeedback.hbs
@@ -1,29 +1,20 @@
 <div class="container-fluid">
   <div class="row feedback">
-    <div class="feedback-side-bar col-3 p-0">
-
-      <div class="container-fluid">
-        <div class="row d-flex justify-content-center">
-          <ul class="nav flex-column">
-            <li class="nav-feedback-item">
-              <a class="nav-link active" href="/">Trang chủ</a>
-            </li>
-            <li class="nav-feedback-item">
-              <a class="nav-link active" href="/feedback">Góp ý cửa hàng</a>
-            </li>
-            <li class="nav-feedback-item">
-              <a class="nav-link" href="/account/signin">Đăng nhập</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="feedback-section col-9 p-0">
+    <div class="feedback-section col-12 p-0">
       <div class="feedback-wrapper m-3 p-3">
-        <h2 class="feedback-title ml-1">Góp ý cửa hàng</h2>
-        <div class="feedback-wrapper-list d-flex flex-column align-items-end">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Góp ý cửa
+              hàng</li>
+          </ol>
+        </nav>
+        <h2 class="feedback-title text-center">Góp ý cửa hàng</h2>
+        <div
+          class="feedback-wrapper-list d-flex flex-column align-items-center justify-content-center"
+        >
           <button
-            class="btn btn-add-feedback font-weight-bold mr-3"
+            class="btn btn-add-feedback font-weight-bold mr-3 align-self-end"
             data-toggle="modal"
             data-target="#feedbackModal"
           >
@@ -42,20 +33,23 @@
             </svg>
             Thêm mới
           </button>
-          <div class="col-12 mt-3">
-            <ul class="feedback-list">
+          <div class="col-12 col-lg-9 mt-3">
+            <ul class="feedback-list pl-0">
               {{#each feedbacks}}
                 <li class="feedback-item p-2 mb-3">
                   <h5 class="feedback-author">{{this.author}}</h5>
-                  <div class="feedback-content d-flex m-3">
-                    <div class="col-6 d-flex flex-column">
+                  <div
+                    class="feedback-item-content d-flex flex-column flex-lg-row align-items-start align-items-lg-center m-3"
+                  >
+                    <div
+                      class="col-12 col-sm-6 d-flex flex-column align-items-start"
+                    >
                       <div class="feedback-content">{{this.feedback}}</div>
-                      <div class="feedback-date mt-4">
-                        <div class="feedback-date mt-4">{{#dateToString
-                            this.createdAt
-                          }}{{/dateToString}}</div></div>
+                      <div class="feedback-date mt-2 mt-sm-4">{{#dateToString
+                          this.createdAt
+                        }}{{/dateToString}}</div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6 mt-2 mt-lg-0">
                       {{#if this.image}}
                         <img class="feedback-img" src="{{this.image}}" alt="" />
                       {{/if}}
@@ -65,8 +59,8 @@
                   {{#if this.replyID}}
                     <div class="reply-wrapper m-3 p-1">
                       <h5 class="feedback-author">{{this.replyID.author}}</h5>
-                      <div class="feedback-content row d-flex flex-wrap m-3">
-                        <div class="d-flex flex-column">
+                      <div class="feedback-content row m-3">
+                        <div class="d-flex flex-column align-items-start">
                           <div
                             class="feedback-content"
                           >{{this.replyID.feedback}}</div>
