--- a/src/resource/views/cart/wait.hbs
+++ b/src/resource/views/cart/wait.hbs
@@ -1,36 +1,102 @@
 
-<section class="vh-100" style="background-color: rgb(247, 247, 247);">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem;">
-          <div class="row g-0">
-            <div class="col-md-6 col-lg-5 d-none d-md-block" >
-              <img height="500" width="400" src="../../public/image/logo_left.jpg"
-                alt="login form" style="border-radius: 1rem 0 0 1rem;" />
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+    <!-- Add your other meta tags, stylesheets, and scripts here -->
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .vh-100 {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgb(247, 247, 247);
+        }
+
+        .container {
+            padding: 5px;
+            max-width: 100%;
+        }
+
+        .card {
+            border-radius: 1rem;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .logo-container i {
+            color: #a45e32;
+            margin-right: 10px;
+        }
+
+        .logo-container span {
+            color: #a45e32;
+            font-size: 2rem;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .img-container {
+            overflow: hidden;
+            border-radius: 1rem 0 0 1rem;
+        }
+
+        .img-container img {
+            width: 100%;
+            height: auto;
+        }
+
+        @media (max-width: 450px) {
+            .row.d-flex {
+                flex-direction: column;
+            }
+
+            .img-container {
+                border-radius: 1rem 1rem 0 0;
+            }
+        }
+    </style>
+</head>
+<body>
+
+<section class="vh-100">
+    <div class="container py-5">
+        <div class="card">
+            <div class="row g-0">
+                <div class="col-md-6 col-lg-5 d-none d-md-block img-container">
+                    <img src="../../public/image/logo_left.jpg" alt="login form">
+                </div>
+
+                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <div class="card-body p-4 p-lg-5 text-black">
+                        <form method="POST" action="/account/signin">
+                            <div class="logo-container">
+                                <i class="fas fa-cubes fa-2x"></i>
+                                <span class="h1 fw-bold mb-0 ml-2">MyCoffee</span>
+                            </div>
+
+                            <h5 class="fw-normal mb-3 pb-3 text-center" style="letter-spacing: 1px; color: #6b2f0a; font-size: 2rem;">Vui lòng chờ nhân viên xác nhận</h5>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-5 text-black">
-
-                <form method="POST" action="/account/signin" >
-                  <div class="d-flex align-items-center mb-3 pb-1 ">
-                    <i class="fas fa-cubes fa-2x me-3" style="color: #a45e32;"></i>
-                    <span class="h1 fw-bold mb-0 ml-2" style="color: #a45e32;justify-content: center;">MyCoffee</span>
-                  </div>
-
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; color: #6b2f0a; font-size: 2rem; justify-content: center;" >Vui lòng chờ nhân viên xác nhận</h5>
-
-                </form>
-
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
-
      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
      <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
      <script>
@@ -53,5 +119,7 @@
                }
           })
      </script>
+    </body>
+  </html>
 
 
