--- a/src/resource/views/cart/show.hbs
+++ b/src/resource/views/cart/show.hbs
@@ -7,7 +7,7 @@
     <a style="color: rgb(100, 97, 97);" href="/"> Trang chủ </a>
     <span>&gt;</span>
   {{/if}}
-  <span>&gt;</span>
+
   {{! Reply }}
   {{#if employee}}
     <a style="color: rgb(100, 97, 97);" href="/employees/cart/show">
@@ -20,27 +20,28 @@
 
 <div class="container-fluid mt-4">
   <div class="row">
-    <div class="col-sm-8" style="background-color:rgb(250, 250, 251);">
-        <h3>Sản phẩm đã chọn</h3>
-        <div class="box__orderDetail">
-            <table class="table mt-4 ">
-              <thead>
-                <tr>
-                    <th scope="col">Sản phẩm</th>
-                    <th scope="col">Đơn giá</th>
-                    <th scope="col">Số lượng</th>
-                    <th scope="col">Thành tiền</th>
-                    <th scope="col"></th>
-                 </tr>
-              </thead>
-    <tbody>
-      {{#each orders}}
+    <div class="order__detail col-12 col-sm-8 col-lg-8" style="background-color:rgb(250, 250, 251);">
+  <h3>Sản phẩm đã chọn</h3>
+  <div class="box__orderDetail table-responsive">
+    <table class="table__orderDetail table mt-4">
+      <thead>
         <tr>
-          <td scope="row"><strong>{{this.productName}}</strong>
+          <th scope="col">Sản phẩm</th>
+          <th scope="col">Đơn giá</th>
+          <th scope="col">Số lượng</th>
+          <th scope="col">Thành tiền</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each orders}}
+        <tr>
+          <td scope="row">
+            <strong>{{this.productName}}</strong>
             <ul>
-                <li>Tỉ lệ đá: {{this.icePercent}}</li>
-                <li>Tỉ lệ đường: {{this.sugarPercent}}</li>
-                <li>Thêm: {{this.extra}}</li>
+              <li>Tỉ lệ đá: {{this.icePercent}}</li>
+              <li>Tỉ lệ đường: {{this.sugarPercent}}</li>
+              <li>Thêm: {{this.extra}}</li>
             </ul>
           </td>
           <td>{{this.amount}}</td>
@@ -48,23 +49,23 @@
           <td>{{this.total}}</td>
           <td>
             <a href="/cart/{{this._id}}/edit" class="btn btn-link text-dark">Chỉnh sửa</a>
-            <a href="" data-toggle="modal" data-id="{{this._id}}" data-target="#delete-course-modal"class="btn btn-link text-dark">Xóa</a>
+            <a href="" data-toggle="modal" data-id="{{this._id}}" data-target="#delete-course-modal" class="btn btn-link text-dark">Xóa</a>
           </td>
         </tr>
-      {{else}}
+        {{else}}
         <tr>
           <td colspan="5" class="text-center">
             Chưa có order.
             <a href="/">Thêm order</a>
           </td>
         </tr>
-      {{/each}}
-    </tbody>
-  </table>
-        </div>
-    </div>
-    <div class="col-sm-4 mt-4" style="background-color:rgb(255, 255, 255);">
-         <form method="POST" action="./order" name="order__information">
+        {{/each}}
+      </tbody>
+    </table>
+  </div>
+</div>
+    <div class="pl-4 col-sm-4 mt-4" style="background-color:rgb(255, 255, 255);">
+         <form class="pl-4" method="POST" action="./order" name="order__information">
           <div class="d-inline-flex">
             <label for="total" class="mr-sm-2">Tạm tính: </label>
             <input type="number" class="order__infor-detail mb-2 mr-sm-2" name="total" id="total" value="{{total}}" readonly>
