--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,22 +1,10 @@
 <div class="header d-flex align-items-center justify-content-between">
-  <img
-    class="header__logo-left"
-    src="../../../public/image/logo_left.jpg"
-    alt="logo_left"
-  />
+  <img class="header__logo-left" src="../../../public/image/logo_left.jpg" alt="logo_left" />
 
-  <div class="div__center d-inline-flex">
-    <img
-      class="header__logo-center"
-      src="../../../public/image/logo_center.png"
-      alt="logo_center"
-    />
-    <h1 class="header__title ml-2">My Coffee</h1>
+  <div class="div__center d-inline-flex flex-column flex-md-row align-items-center">
+    <img class="header__logo-center" src="../../../public/image/logo_center.png" alt="logo_center" />
+    <h1 class="header__title ml-md-2">My Coffee</h1>
   </div>
 
-  <img
-    class="header__logo-right"
-    src="../../../public/image/logo_right.jpg"
-    alt="logo_right"
-  />
+  <img class="header__logo-right" src="../../../public/image/logo_right.jpg" alt="logo_right" />
 </div>
