--- a/src/resource/views/search.hbs
+++ b/src/resource/views/search.hbs
@@ -51,7 +51,7 @@
       type="submit"
     >Search</button>
   </form>
-  <a class="shopping-cart pr-3" href="cart/show" style="float: right;"><i
+  <a class="shopping-cart pr-3" href="cart/show" style="float: right; color: #c4996c"><i
       class="fa-solid fa-cart-shopping"
     ></i></a>
 </nav>
@@ -94,7 +94,7 @@
       <div id="coffee">
         {{#each search}}
           {{#ifEquals this.type "coffee"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -119,7 +119,7 @@
       <div id="juice">
         {{#each search}}
           {{#ifEquals this.type "juice"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -144,7 +144,7 @@
       <div id="smoothy">
         {{#each search}}
           {{#ifEquals this.type "smoothy"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -169,7 +169,7 @@
       <div id="iceblended">
         {{#each search}}
           {{#ifEquals this.type "iceblended"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -194,7 +194,7 @@
       <div id="tea">
         {{#each search}}
           {{#ifEquals this.type "tea"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -219,7 +219,7 @@
       <div id="milktea">
         {{#each search}}
           {{#ifEquals this.type "milktea"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -244,7 +244,7 @@
       <div id="soda">
         {{#each search}}
           {{#ifEquals this.type "soda"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
@@ -269,7 +269,7 @@
       <div id="food">
         {{#each search}}
           {{#ifEquals this.type "food"}}
-            <div class="menu__item col-sm-2 col-lg-2">
+            <div class="menu__item col-5 col-lg-2">
               <div class="card card-course-item">
                 <a href="/products/{{this.slug}}">
                   <img
