--- a/src/resource/views/admin/reportRevenue.hbs
+++ b/src/resource/views/admin/reportRevenue.hbs
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+        <button style="background-color: #ffcc81; border:#ffcc81" type="submit" class="btn btn-primary">Tìm kiếm</button>
     </form>
 </div>
 
