--- a/src/resource/views/cart/successOrder.hbs
+++ b/src/resource/views/cart/successOrder.hbs
@@ -21,6 +21,9 @@
                   
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; color: #6b2f0a; font-size: 2rem; justify-content: center;" >Bạn đã order thành công! Cảm ơn bạn rất nhiều!</h5>
                 <div class="mt-4 ml-4">
+                    <a style="color: rgb(100, 97, 97);margin:auto;" href="/cart/order/view/{{order._id}}"> Xem lại đơn </a>
+                </div>
+                <div class="mt-4 ml-4">
                     <a style="color: rgb(100, 97, 97);margin:auto;" href="/"> Trở về trang chủ </a>
                 </div>
               </div>
