--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -216,3 +216,17 @@ li.nav-item {
   /* Màu của Bootstrap primary */
   color: #fff;
   /* Màu chữ trắng */ }
+
+@media only screen and (max-width: 450px) {
+  .product_detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left; }
+  .product__image {
+    width: 430px;
+    margin-bottom: 15px;
+    /* Add margin between image and form on smaller screens */
+    margin: 0 auto; }
+  .text-center {
+    text-align: center; } }
