--- a/src/resource/views/products/showProduct.hbs
+++ b/src/resource/views/products/showProduct.hbs
@@ -109,7 +109,7 @@
          </div>
 
           <div class="text-center">
-             <button type="submit" class="btn btn-warning product__order-button" style="background-color: #ffcc81;">Thêm vào đơn hàng</button>
+             <button type="submit" class="btn btn-warning product__order-button" style="background-color: #ffcc81;justify-content:center; align-items:center;display: flex;">Thêm vào đơn hàng</button>
          </div>
 
     </form>
