--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -309,6 +309,19 @@ li.nav-item {
     display: flex;
     flex-direction: row!important;
     list-style: none;
+  }.product_detail{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+  }
+  .product__image{
+    width: 430px;
+    margin-bottom: 15px; /* Add margin between image and form on smaller screens */
+    margin: 0 auto;
+  }
+  .text-center {
+    text-align: center;
   }
   
 }
