--- a/src/resource/views/employees/create.hbs
+++ b/src/resource/views/employees/create.hbs
@@ -3,23 +3,23 @@
     <form method="POST" action="/employees/store">
     <div class="form-group">
         <label for="name">Họ và tên</label>
-        <input type="text" class="form-control" id="name" name="name">
+        <input type="text" class="form-control" id="name" name="name"required>
     </div>
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" name="email">
+        <input type="email" class="form-control" id="email" name="email"required>
     </div>
     <div class="form-group">
         <label for="sdt">Số điện thoại</label>
-        <input type="text" class="form-control" id="sdt" name="sdt">
+        <input type="text" class="form-control" id="sdt" name="sdt"required>
     </div>
     <div class="form-group">
         <label for="username">Tên đăng nhập</label>
-        <input type="text" class="form-control" id="username" name="username">
+        <input type="text" class="form-control" id="username" name="username"required>
     </div>
     <div class="form-group">
         <label for="password">Mật khẩu</label>
-        <input type="text" class="form-control" id="password" name="password">
+        <input type="text" class="form-control" id="password" name="password"required>
     </div>
     
     <button type="submit" class="btn btn-warning">Thêm nhân viên</button>
