--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -231,6 +231,13 @@ li.nav-item {
   color: #fff;
   /* Màu chữ trắng */ }
 
+.list-group-item.active {
+  background-color: #C4996C;
+  /* Màu của Bootstrap primary */
+  color: #fff;
+  /* Màu chữ trắng */
+  border: #e2c799; }
+
 @media (max-width: 450px) {
   .header {
     width: 100%;
