--- a/src/resource/views/cart/show.hbs
+++ b/src/resource/views/cart/show.hbs
@@ -21,7 +21,7 @@
 <div class="container-fluid mt-4">
   <div class="row">
     <div class="order__detail col-12 col-sm-8 col-lg-8" style="background-color:rgb(250, 250, 251);">
-  <h3>Sản phẩm đã chọn</h3>
+  <h5 class="ml-2">Sản phẩm đã chọn</h5>
   <div class="box__orderDetail table-responsive">
     <table class="table__orderDetail table mt-4">
       <thead>
@@ -79,6 +79,11 @@
             <input type="number" class="order__infor-detail mb-2 mr-sm-2" name="totalCost" id="discount" value="{{total}}" readonly>
           </div>
           <textarea class="form-control mt-2" rows="5" style="width:280px;" name="note" id="comment" placeholder="Lời nhắn đến nhân viên" ></textarea>
+           {{#if msg}}
+                     <div style="width:280px;" class="alert alert-{{color}} mt-4">
+                       <strong>{{msg}}</strong>
+                     </div>
+              {{/if}}
           <button type="submit" class="btn btn-warning product__order-button mt-4" style="background-color: #ffcc81;">Xác nhận</button>   
          </form>
        </div>
