--- a/src/resource/views/employees/edit.hbs
+++ b/src/resource/views/employees/edit.hbs
@@ -1,3 +1,7 @@
+<div class="mt-4 ml-4">
+<a style="color: rgb(100, 97, 97);" href="/admin/showEmployees"> Trở về </a>
+</div>
+
 <div class="container mt-4">
     <h3>Chỉnh sửa tài khoản</h3>
     <form method="POST" action="/employees/{{employee._id}}?_method=PUT">
