--- a/src/resource/views/signin.hbs
+++ b/src/resource/views/signin.hbs
@@ -21,15 +21,21 @@
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form2Example17">Username</label>
-                    <input type="text" id="form2Example17" class="form-control form-control-lg" name="username" />
+                    <input type="text" id="form2Example17" class="form-control form-control-lg" name="username" required/>
                     
                   </div>
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form2Example27">Password</label>
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" name="password" />
+                    <input type="password" id="form2Example27" class="form-control form-control-lg" name="password" required/>
                    
                   </div>
+
+                  {{#if msg}}
+                     <div class="alert alert-{{color}} mt-4">
+                       <strong>{{msg}}</strong>
+                     </div>
+                  {{/if}}
 
                   <div class="pt-1 mb-4">
                     <button class="btn btn-dark btn-lg btn-block text-light" style="background-color: #bf7c53;" type="submit">Login</button>
