--- a/src/resource/views/products/addProduct.hbs
+++ b/src/resource/views/products/addProduct.hbs
@@ -13,19 +13,19 @@
     <form method="POST" action="/products/store" enctype="multipart/form-data">
     <div class="form-group">
         <label for="name">Tên sản phẩm</label>
-        <input type="text" class="form-control" id="name" name="name">
+        <input type="text" class="form-control" id="name" name="name" required>
     </div>
     <div class="form-group">
         <label for="price">Giá bán</label>
-        <input type="number" class="form-control" id="price" name="price" min="0">
+        <input type="number" class="form-control" id="price" name="price" min="0" required>
     </div>
     <div class="form-group">
         <label for="type">Loại sản phẩm</label>
-        <input type="text" class="form-control" id="type" name="type">
+        <input type="text" class="form-control" id="type" name="type" required> 
     </div>
     <div class="form-group">
         <label for="image">Hình ảnh</label>
-        <input type="file" class="form-control" id="image" name="image" accept=".png, .jpg" onchange="previewImage(event)">
+        <input type="file" class="form-control" id="image" name="image" accept=".png, .jpg" onchange="previewImage(event)" required>
         <img src="" id="preview" style="max-width: 500px; display: none;" alt="Preview">
     </div>
     <button type="submit" class="btn btn-warning">Thêm sản phẩm</button>
